tests/diagnostics/pipeline/downstream_suppression/parsing_error_blocks_file_role_rules/expect.txt
# exit: 1
lib.test.coppice:1:8: error: constants require an explicit type annotation
  BROKEN := 1
         ^
